fixed footer overlapping with position: relative; due to oversized border of buy section

--- a/style/style.css
+++ b/style/style.css
@@ -134,6 +134,7 @@
     padding-top: 20px;
     height: fit-content;
     margin-bottom: 100px;
+    position: relative;
 }
 
 .Save-heading {
